# bubble

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  shader_debug_modes.txt
projects/: CMakeLists.txt
projects/app/: CMakeLists.txt
projects/app/include/: scene_camera.hpp
projects/app/include/app/: editor_app.hpp  scene_camera.hpp  scene_viewport.hpp
projects/app/include/interface/: editor_interfaces.hpp  ieditor_interface.hpp  scnene_viewport_interface.hpp
projects/app/src/: editor_app.cpp  editor_interfaces.cpp  main.cpp
projects/editor/: CMakeLists.txt
projects/editor/include/: editor_app.hpp  editor_application.hpp  editor_interface_hot_reloader.hpp  editor_interface_loader.hpp  editor_shaders.hpp  editor_state.hpp  ieditor_interface.hpp  resource_hot_reloader.hpp  scene_camera.hpp  shader_hot_reloader.hpp
projects/editor/include/app/: editor_app.hpp  editor_interface_loader.hpp  editor_interfaces.hpp  scene_camera.hpp
projects/editor/include/editor_application/: editor_application.hpp  editor_state.hpp  history.hpp  selection.hpp  ui_globals.hpp
projects/editor/include/editor_interfaces/: editor_interface_hot_reloader.hpp  ieditor_interface.hpp
projects/editor/include/editor_interfaces/interfaces/: entities_interface.hpp  menubar.hpp  project_interface.hpp  scnene_viewport_interface.hpp
projects/editor/include/editor_project_tree/: project_tree.hpp
projects/editor/include/editor_resources_hot_reloader/: resources_hot_reloader.hpp
projects/editor/include/editor_user_interface/: editor_user_interface.hpp
projects/editor/include/editor_user_interface/windows/: entities_window.hpp  menubar.hpp  project_files_window.hpp  project_tree_window.hpp  project_viewport_window.hpp  project_window.hpp  scnene_viewport_window.hpp  window_base.hpp
projects/editor/include/project_tree/: project_tree.hpp
projects/editor/include/utils/: auto_backup.hpp  clipboard.hpp  history.hpp  history_commands.hpp  resources_hot_reloader.hpp  scene_camera.hpp  selection.hpp
projects/editor/src/: editor_app.cpp  editor_application.cpp  editor_interface_hot_reloader.cpp  editor_interface_loader.cpp  editor_interfaces.cpp  main.cpp  resource_hot_reloader.cpp  resources_hot_reloader.cpp  selection.cpp  shader_hot_reloader.cpp
projects/editor/src/user_interface/: editor_interface_hot_reloader.cpp  editor_user_interface.cpp  entities_interface.cpp  menubar.cpp  project_interface.cpp  scnene_viewport_interface.cpp  window_base.cpp
projects/editor/src/user_interface/windows/: entities_window.cpp  menubar.cpp  project_files_window.cpp  project_tree_window.cpp  project_viewport_window.cpp  project_window.cpp  scnene_viewport_window.cpp  window_base.cpp
projects/editor_interface/: CMakeLists.txt
projects/editor_interface/include/: editor_window_test.hpp
projects/editor_interface/include/interface/: editor_window_test.hpp  entities_interface.hpp  ieditor_interface.hpp  menubar.hpp  project_interface.hpp  properties_interface.hpp  scnene_viewport_interface.hpp
projects/editor_interface/src/: dll_main.cpp  export_interfaces.cpp
projects/editor_interfaces/: CMakeLists.txt
projects/editor_interfaces/include/interfaces/: entities_interface.hpp  menubar.hpp  project_interface.hpp  scnene_viewport_interface.hpp
projects/editor_interfaces/src/: export_interfaces.cpp
projects/engine/: CMakeLists.txt
projects/engine/include/: error.hpp  event.hpp  window.hpp
projects/engine/include/engine/: engine.hpp
projects/engine/include/engine/loader/: loader.hpp
projects/engine/include/engine/log/: log.hpp
projects/engine/include/engine/pch/: pch.hpp
projects/engine/include/engine/physics/: character_controller.hpp  physics_engine.hpp  physics_object.hpp  rigid_body.hpp
projects/engine/include/engine/project/: project.hpp  project_tree.hpp
projects/engine/include/engine/renderer/: buffer.hpp  camera.hpp  camera_free.hpp  camera_third_person.hpp  cubemap.hpp  framebuffer.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  skybox.hpp  texture.hpp  transform.hpp
projects/engine/include/engine/scene/: component_manager.hpp  components.hpp  components_manager.hpp  scene.hpp
projects/engine/include/engine/scripting/: glm_bindings.hpp  script.hpp  scripting_engine.hpp
projects/engine/include/engine/serialization/: event_serialization.hpp  (+3 more)
projects/engine/include/loader/: loader.hpp
projects/engine/include/renderer/: buffer.hpp  camera.hpp  camera_free.hpp  camera_third_person.hpp  cubemap.hpp  framebuffer.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  skybox.hpp  texture.hpp  uniform_buffer.hpp  vertex_array.hpp
projects/engine/include/scene/: scene.hpp
projects/engine/include/serialization/: event_serialization.hpp
projects/engine/include/utils/: error.hpp  imexp.hpp  timer.hpp
projects/engine/include/window/: event.hpp  imgui.hpp  input.hpp  key_map.hpp  window.hpp
projects/engine/src/: engine.cpp  window.cpp
projects/engine/src/loader/: loader.cpp  model_loader.cpp  script_loader.cpp  shader_loader.cpp  skybox_loader.cpp  texture_loader.cpp
projects/engine/src/physics/: character_controller.cpp  physics_engine.cpp  physics_object.cpp  rigid_body.cpp
projects/engine/src/project/: project.cpp  project_tree.cpp
projects/engine/src/renderer/: buffer.cpp  camera.cpp  camera_free.cpp  camera_third_person.cpp  cubemap.cpp  framebuffer.cpp  light.cpp  material.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  skybox.cpp  texture.cpp  transform.cpp  uniform_buffer.cpp  vertex_array.cpp
projects/engine/src/scene/: component_manager.cpp  components.cpp  scene.cpp
projects/engine/src/scripting/: glm_bindings.cpp  script.cpp  scripting_engine.cpp
projects/engine/src/serialization/: event_serialization.cpp  loader_serialization.cpp  scene_serialization.cpp  types_serialization.cpp
projects/engine/src/types/: any.cpp  dynamic.cpp
projects/engine/src/utils/: error.cpp  filesystem.cpp  geometry.cpp  timer.cpp
projects/engine/src/window/: imgui.cpp  input.cpp  window.cpp
(+65 files in other folders)
